just one HashMap remaining for no_std compatability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ chrono = "0.4"
 
 [dependencies.nom]
 version = "5.0.0"
-default-features = true
+default-features = false
 
 [dev-dependencies]
 quickcheck = "0.9"
