fix: tests for parsing specific or all sentences
Signed-off-by: Lachezar Lechev <elpiel93@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -150,6 +150,17 @@ ZFO = []
 # feature: waypoint
 ZTG = []
 
+[[test]]
+name = "all_supported_messages"
+required-features = ["all-sentences"]
+
+[[test]]
+name = "file_log_parser"
+required-features = ["all-sentences"]
+
+[[test]]
+name = "functional_tests"
+required-features = ["all-sentences"]
 
 [[bench]]
 name = "nom_parsing"
