--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,14 +26,16 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-arrayvec = { version = "0.7.2", default-features = false }
-chrono = { version = "0.4.19", default-features = false }
-heapless = "0.7.15"
+arrayvec = { version = "0.7.2", default-features = false, features = ["serde"]}
+chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
+heapless = { version ="0.7.15", features = ["serde"]}
 nom = { version = "7.1.1", default-features = false }
 
 # we include num-traits only when `std` is not enabled
 # because of `fract()` and `trunc()` methods
 num-traits = { version = "0.2", default-features = false }
+serde = { version = "1.0.163", features = ["derive"], default-features = false }
+serde_with = { version = "3.0.0", default-features = false, features = ["macros", "chrono"] }
 
 [dev-dependencies]
 approx = "0.5.1"
