--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-arrayvec = { version = "0.7.2", default-features = false}
+arrayvec = { version = "0.7.2", default-features = false }
 chrono = { version = "0.4.19", default-features = false }
-heapless = { version ="0.7.15"}
+heapless = "0.7.15"
 nom = { version = "7.1.1", default-features = false }
 
 # we include num-traits only when `std` is not enabled
