--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ repository = "https://github.com/AeroRust/nmea"
 readme = "README.md"
 
 edition = "2021"
-rust-version = "1.60"
+rust-version = "1.61"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -29,25 +29,26 @@ rustdoc-args = ["--cfg", "docsrs"]
 arrayvec = { version = "0.7.2", default-features = false }
 chrono = { version = "0.4.19", default-features = false }
 heapless = "0.7.15"
-nom = { version = "7.1.1", default-features = false }
+nom = { version = "7.1", default-features = false }
 
 # we include num-traits only when `std` is not enabled
 # because of `fract()` and `trunc()` methods
 num-traits = { version = "0.2", default-features = false, features = ["libm"]}
 cfg-if = "1"
-serde = { version = "1.0.163",  default-features = false, optional = true }
-serde_with = { version = "3.0.0", default-features = false,  optional = true }
+serde = { version = "1.0", default-features = false, optional = true }
+serde_with = { version = "3.0", default-features = false, optional = true }
 
 [dev-dependencies]
-approx = "0.5.1"
+approx = "0.5"
 doc-comment = "0.3"
 pretty_assertions = "1"
-quickcheck = { version = "1.0.3", default-features = false }
+quickcheck = { version = "1", default-features = false }
+# criterion 0.5 has clap_builder version which requires at least Rust 1.64
 criterion = "0.4"
 
 [features]
 default = ["std", "all-sentences"]
-std = ["nom/std", "chrono/std", "arrayvec/std"]
+std = ["nom/std", "chrono/std", "arrayvec/std", "serde?/std", "serde_with?/std"]
 serde = [
     "serde/derive", 
     "serde_with/macros", 
@@ -56,7 +57,6 @@ serde = [
     "chrono/serde", 
     "arrayvec/serde"
 ]
-
 
 all-sentences = ["GNSS", "waypoint", "maritime", "water", "vendor-specific", "other"]
 # GNSS specific sentences related to the possition or speed relative to the ground
