--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,16 +19,16 @@ repository = "https://github.com/AeroRust/nmea"
 readme = "README.md"
 
 edition = "2021"
-rust-version = "1.61"
+rust-version = "1.64"
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-arrayvec = { version = "0.7.2", default-features = false }
-chrono = { version = "0.4.19", default-features = false }
-heapless = "0.7.15"
+arrayvec = { version = "0.7", default-features = false }
+chrono = { version = "0.4", default-features = false }
+heapless = "0.7"
 nom = { version = "7.1", default-features = false }
 
 # we include num-traits only when `std` is not enabled
@@ -43,9 +43,9 @@ approx = "0.5"
 doc-comment = "0.3"
 pretty_assertions = "1"
 quickcheck = { version = "1", default-features = false }
-# criterion 0.5 has clap_builder version which requires at least Rust 1.64
+# criterion 0.5.1 requires at least Rust 1.70 because of clap v4.4.0.
 criterion = "0.4"
-serde_json = "1.0.105"
+serde_json = "1.0"
 
 [features]
 default = ["std", "all-sentences"]
