--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ repository = "https://github.com/AeroRust/nmea"
 readme = "README.md"
 
 edition = "2021"
+# Update README.md and ci.yml when updating the MSRV!
 rust-version = "1.65"
 
 [package.metadata.docs.rs]
