--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ nom = { version = "7.1", default-features = false }
 
 # we include num-traits only when `std` is not enabled
 # because of `fract()` and `trunc()` methods
-num-traits = { version = "0.2", default-features = false, features = ["libm"]}
+num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 cfg-if = "1"
 serde = { version = "1.0", default-features = false, optional = true }
 serde_with = { version = "3.0", default-features = false, optional = true }
@@ -47,7 +47,7 @@ doc-comment = "0.3"
 pretty_assertions = "1"
 quickcheck = { version = "1", default-features = false }
 # criterion 0.5.1 requires at least Rust 1.70 because of clap v4.4.0.
-criterion = "0.4"
+criterion = "=0.4"
 serde_json = "1.0"
 
 [features]
