--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,6 @@ approx = "0.5"
 doc-comment = "0.3"
 pretty_assertions = "1"
 quickcheck = { version = "1", default-features = false }
-# criterion 0.5.1 requires at least Rust 1.70 because of clap v4.4.0.
-criterion = "=0.4"
 serde_json = "1.0"
 
 [features]
@@ -181,10 +179,5 @@ required-features = ["all-sentences"]
 name = "functional_tests"
 required-features = ["all-sentences"]
 
-[[bench]]
-name = "nom_parsing"
-harness = false
-
-[[bench]]
-name = "gsv_parser"
-harness = false
+[workspace]
+members = [".", "benches-harness"]
