feat: update Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,17 +62,13 @@ serde = [
 
 all-sentences = ["GNSS", "waypoint", "maritime", "water", "vendor-specific", "other"]
 # GNSS specific sentences related to the possition or speed relative to the ground
-GNSS = ["APA", "ALM", "GBS", "GGA", "GLL", "GNS", "GSA", "GSV", "RMC", "VTG"]
+GNSS = ["ALM", "APA", "GBS", "GGA", "GLL", "GNS", "GSA", "GSV", "RMC", "VTG"]
 
 waypoint = ["AAM", "BOD", "BWC", "BWW", "WNC", "ZFO", "ZTG"]
 maritime = ["waypoint", "water"]
 water = ["DBK", "MTW", "VHW"]
 vendor-specific = ["RMZ"]
 other = ["HDT", "MDA", "MWV", "TXT", "ZDA"]
-
-# APA - Autopilot Sentence "A"
-# feature: GNSS
-APA = []
 
 # AAM - Waypoint Arrival Alarm
 # feature: waypoint
@@ -81,6 +77,10 @@ AAM = []
 # ALM - GPS Almanac Data
 # feature: GNSS
 ALM = []
+
+# APA - Autopilot Sentence "A"
+# feature: GNSS
+APA = []
 
 # BOD - Bearing - Waypoint to Waypoint
 # feature: waypoint
