--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ defmt-03 = ["dep:defmt", "heapless/defmt-03"]
 
 all-sentences = ["GNSS", "waypoint", "maritime", "water", "vendor-specific", "other"]
 # GNSS specific sentences related to the possition or speed relative to the ground
-GNSS = ["ALM", "APA", "GBS", "GGA", "GLL", "GNS", "GSA", "GSV", "RMC", "VTG"]
+GNSS = ["APA", "ALM", "GBS", "GGA", "GLL", "GNS", "GSA", "GSV", "RMC", "VTG"]
 
 waypoint = ["AAM", "BOD", "BWC", "BWW", "WNC", "ZFO", "ZTG"]
 maritime = ["waypoint", "water"]
