--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        # When passing an explicit toolchain as an input instead of @rev,
+        # you'll want to use "dtolnay/rust-toolchain@master" as the revision of the action.
+        uses: dtolnay/rust-toolchain@master
         with:
           components: rust-src
           toolchain: ${{ matrix.rust }}
